3.2.0.0/TRANSLATION_STATUS.md
# Translation Status (3.2.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Rebuilt in place: existing translations for this version are preserved, and any strings still marked `untranslated` remain so (they fall back to English until translated).

- Total strings (both projects): 466
- Generated: 2026-06-24 11:05:46 +08:00

Jump to: [es-ES](#es-es) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 466 | 0 | 100% |
| tr-TR | 464 | 2 | 99% |

## Project: OmniConsole

Strings: 443

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 443 | 0 | 100% |
| tr-TR | 442 | 1 | 99% |

## Project: OmniConsole.PhantomLink

Strings: 23

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 23 | 0 | 100% |
| tr-TR | 22 | 1 | 95% |

## Untranslated keys

### es-ES

_All translated._

### tr-TR

**OmniConsole**

Changed (re-translate) (1):
- `ManageLanguages_Action_Install`

**OmniConsole.PhantomLink**

New keys (1):
- `Widget_Layout_Classic.Content`
