3.5.0.0/TRANSLATION_STATUS.md
# Translation Status (3.5.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Rebuilt in place: existing translations for this version are preserved, and any strings still marked `untranslated` remain so (they fall back to English until translated).

- Total strings (both projects): 472
- Generated: 2026-07-04 13:24:00 +08:00

Jump to: [es-ES](#es-es) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 472 | 0 | 100% |
| tr-TR | 466 | 6 | 98% |

## Project: OmniConsole

Strings: 449

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 449 | 0 | 100% |
| tr-TR | 443 | 6 | 98% |

## Project: OmniConsole.PhantomLink

Strings: 23

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 23 | 0 | 100% |
| tr-TR | 23 | 0 | 100% |

## Untranslated keys

### es-ES

_All translated._

### tr-TR

**OmniConsole**

New keys (6):
- `BackgroundMaterialSetting_Title.Text`
- `BackgroundMaterialSetting_Description.Text`
- `BackgroundMaterialSetting_Note.Text`
- `BackgroundMaterialItem_PhantomClassic`
- `BackgroundMaterialItem_PhantomGlass`
- `BackgroundMaterialItem_PhantomGlassDeep`
